tests/shouldFail/j307c.c
void g() { }

void f(){
	return g();
}

int main(void){
	f();
}


